--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@
           </svg>
         </button>
       </div>
-
       <div class="mob-menu">
         <div class="mob-menu-wrap container">
           <button class="close-btn mobile">
             <svg class="close-btn-icon" width="8" height="8">
-              <use href="./images/icons.svg#close-icon"></use>
+              <use href="./images/icons.svg#icon-close-button"></use>
             </svg>
           </button>
           <nav class="mob-nav-menu">
@@ -619,7 +618,7 @@
             <label class="modal-accept-text" for="user-privacy"
               ><span class="modal-accept-checker">
                 <svg class="box-checker" width="10" height="8">
-                  <use href="./images/icons.svg#check-icon"></use>
+                  <use href="./images/icons.svg#icon-checkmark"></use>
                 </svg>
               </span>
               <p>
