fix hero and subscribe

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <img
                   class="product-list-img"
                   src="./images/banking-app.jpg"
-                  srcset="./images/banking-app.jpg x1, ./images/banking-app@2x.jpg x2"
+                  srcset="./images/banking-app.jpg x1, ./images/banking-app@2x.jpg"
                   alt="BankApp interface"
                   width="360"
                 />
@@ -391,7 +391,7 @@
                 <img
                   class="product-list-img"
                   src="./images/cachless-payment.jpg"
-                  srcset="./images/cachless-payment.jpg x1, ./images/cachless-payment@2x.jpg x2"
+                  srcset="./images/cachless-payment.jpg x1, ./images/cachless-payment@2x.jpg"
                   alt="A phone scans the qr code"
                   width="360"
                 />
@@ -411,7 +411,7 @@
                 <img
                   class="product-list-img"
                   src="./images/meditation-app.jpg"
-                  srcset="./images/meditation-app.jpg x1, ./images/meditation-app@2x.jpg x2"
+                  srcset="./images/meditation-app.jpg x1, ./images/meditation-app@2x.jpg"
                   alt="Laptop and phone inerface design"
                   width="360"
                 />
@@ -431,7 +431,7 @@
                 <img
                   class="product-list-img"
                   src="./images/taxi-servise.jpg"
-                  srcset="./images/taxi-servise.jpg x1, ./images/taxi-servise@2x.jpg x2"
+                  srcset="./images/taxi-servise.jpg x1, ./images/taxi-servise@2x.jpg"
                   alt="Taxi driver uses an app with geo"
                   width="360"
                 />
@@ -451,7 +451,7 @@
                 <img
                   class="product-list-img"
                   src="./images/screen-illustrations.jpg"
-                  srcset="./images/screen-illustrations.jpg x1, ./images/screen-illustrations@2x.jpg x2"
+                  srcset="./images/screen-illustrations.jpg x1, ./images/screen-illustrations@2x.jpg"
                   alt="Layout of phone wallpapers with planets"
                   width="360"
                 />
@@ -471,7 +471,7 @@
                 <img
                   class="product-list-img"
                   src="./images/online-courses.jpg"
-                  srcset="./images/online-courses.jpg x1, ./images/online-courses@2x.jpg x2"
+                  srcset="./images/online-courses.jpg x1, ./images/online-courses@2x.jpg"
                   alt="A girl uses the telephone to study"
                   width="360"
                 />
